# Rosetta

./: .clang-format  .gitignore  .gitmodules  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  MANIFEST.in  README.md  README_CN.md  RELEASE.md  clean_directory.sh  clean_pip.sh  compile_and_test_all.sh  directory_clean.sh  kill.sh  pip_clean.sh  print_system_info.sh  rosetta.sh  rosetta_.sh  rtt_completion  setup.py  stat_code.sh
cc/: CMakeLists.txt  README.md  compile_and_test.sh  compile_and_test_inner.sh  install_basic_deps_by_cmake.sh
cc/certs/: Client.crt  Server.crt  Server.key
cc/cmake/: FindCrypt.cmake  FindDbgHelp.cmake  FindLibBFD.cmake  FindLibDL.cmake  FindMPIR.cmake  FindRPC.cmake  FindUserenv.cmake  GlobalSettings.cmake  SetCommon.cmake  SetCompileOptions.cmake  SetFunctions.cmake  SetTfCompileOptions.cmake  SetThirdParty.cmake  SetVersionNumber.cmake
cc/conf/: CONFIG.json
cc/modules/: CMakeLists.txt  common.cmake  install_basic_deps_by_cmake.sh  io.cmake  iowrapper.cmake  protocol.cmake
cc/modules/common/: CMakeLists.txt
cc/modules/common/cmake/: pch.h.in
cc/modules/common/examples/: subprocess.cpp
cc/modules/common/include/: version.h
cc/modules/common/include/utils/: check_type.h  csv.h  eigen_util.h  file_directory.h  generate_key.h  global_defines.h  helper.h  logger.h  logger_abandon.h  logger_vector.h  logger_vector_ostream.h  model_tool.h  msg_id.h  msg_id_mgr.h  perf_stats.h  perf_stats_op.h  random_util.h  relic_util.h  rtt_exceptions.h  rtt_logger.h  rtt_logger.hpp  safe_queue.h  secure_encoder.h  secure_misc.h  simple_timer.h  str_type_convert.h  subprocess.h  sys_utils_tool.h  test_report.h  type_utils.h  util.h
cc/modules/common/src/: version.cpp  version.cpp.in
cc/modules/common/src/utils/: file_directory.cpp  generate_key.cpp  helper.cpp  logger.cpp  logger_vector.cpp  logger_vector_ostream.cpp  msg_id.cpp  msg_id_mgr.cpp  perf_stats.cpp  perf_stats_op.cpp  random_util.cpp  rtt_logger.cpp  simple_timer.cpp  str_type_convert.cpp  subprocess.cpp
cc/modules/common/tests/: eigen_util.cpp  model_tool.cpp  perf_stats.cpp  perf_stats_op.cpp  simple_timer.cpp  test.cpp  test.h  test_check_type.cpp
cc/modules/io/: .gitignore  CMakeLists.txt  Doxyfile  README.md  compile_and_test.sh
cc/modules/io/3rd/: catch.hpp  cmdline.h
cc/modules/io/certs/: ca.pem  client.pem  generate.sh  server.pem
cc/modules/io/cmake/: FindCryptoPP.cmake  FindLibRT.cmake  FindLibUUID.cmake  FindMPIRXX.cmake  FindWinSock.cmake  GlobalSettings.cmake  SetCommon.cmake  SetCompileOptions.cmake  SetPlatformFeatures.cmake  SetVersionNumber.cmake
cc/modules/io/doc/: README.md
cc/modules/io/examples/: net_broadcast.cpp  net_helper.h  net_interactive.cpp  net_msgid.cpp  net_multiclients.cpp  net_sync.cpp  netio_ex.cpp
cc/modules/io/include/: ex.h  ex_only_for_test.h  net_io.h
cc/modules/io/include/internal/: client.h  comm.h  connection.h  cycle_buffer.h  msg_id.h  net_io.hpp  netutil.h  nocopyable.h  server.h  simple_buffer.h  socket.h  ssl_socket.h  stat.h
cc/modules/io/src/: client.cpp  connection.cpp  msg_id.cpp  net_io.cpp  server.cpp  socket.cpp  ssl_client.cpp  ssl_lock.cpp  ssl_server.cpp  ssl_socket.cpp
cc/modules/io/src/_internal/: cycle_buffer.cpp  msg_id.cpp  netutil.cpp  stat.cpp
cc/modules/io/src/ev/: client_ev.cpp  server_ev.cpp  socket_ev.cpp
cc/modules/io/src/rtt/: client_rtt.cpp  connection_rtt.cpp  server_rtt.cpp
cc/modules/io/tests/: test.cpp  test.h  test_helper.h  test_net_io.cpp  test_parallel_net_io.cpp
cc/modules/iowrapper/: CMakeLists.txt
cc/modules/iowrapper/include/: channel_wrapper.h  io_manager.h  io_wrapper.h  stat.h
cc/modules/iowrapper/src/: io_manager.cpp  io_wrapper.cpp  stat.cpp
cc/modules/protocol/mpc/: CMakeLists.txt  README.md
cc/modules/protocol/mpc/comm/: CMakeLists.txt
cc/modules/protocol/psi/: CMakeLists.txt
cc/modules/protocol/public/: CMakeLists.txt  protocol_manager.cpp  protocol_manager.h
cc/modules/protocol/utility/: CMakeLists.txt
cc/modules/protocol/zk/: CMakeLists.txt
cc/python_export/: README.md  _rosetta.cc  dataset.h  input.h  io_handler.h  msg_id_handle.h  protocol_handler.h
cc/tf/: CMakeLists.txt
cc/tf/dpass/: CMakeLists.txt  compile_and_test.sh  mpc_base_pass.cc  mpc_base_pass.h  mpc_opt_applyX_pass.cc  mpc_save_model_pass.cc  rosetta_log.cc  rosetta_log.h  rosetta_utils.cc  rosetta_utils.h  tf_graph_writer.cc  tf_graph_writer.h
cc/tf/dpass/cmake/: pch.h.in
cc/tf/dpass/test_cases/: CONFIG.json  test.sh  test_mpc_mixed_pass_2.py  test_mpc_mixed_pass_4.py  test_mpc_optapplyX_pass_1.py  test_mpc_optapplyX_pass_2.py  test_mpc_optapplyX_pass_3.py  test_mpc_optapplyX_pass_4.py  test_mpc_savev2_pass_1.py  test_mpc_savev2_pass_2.py  test_mpc_savev2_pass_3.py  test_mpc_savev2_pass_4.py
cc/tf/misc/: README.md  _rosetta.cc  dataset.h  input.h  player.h
cc/tf/mpcops/: compile_and_test.sh
cc/tf/mpcops/ops/: abs.cc  binary_op.cc  binary_op.h  compare.cc  log.cc  log1p.cc  loss_op.cc  matmul.cc  mpcop_kernel.h  reduce_op.cc  reduce_op.h  relu.cc  restorev2.cc  reveal.cc  savev2.cc  sigmoid.cc  training_ops.cc  unary_op.cc  unary_op.h
cc/tf/rttops/: CMakeLists.txt  README.md  compile_and_test.sh  convert.cc  convert_ops.cc  math.cc  math_ops.cc  model.cc  model_ops.cc  nn.cc  nn_ops.cc  rtt_opname_test.py  state.cc  state_ops.cc  train.cc  train_ops.cc
cc/tf/secureops/: CMakeLists.txt  README.md  compile_and_test.sh  mpc_exceptions.h  secure_base_kernel.cc  secure_base_kernel.h  secure_conv2d.h  secure_convert.cc  secure_convert_ops.cc  secure_math.cc  secure_math_ops.cc  secure_model.cc  secure_model_ops.cc  secure_nn.cc  secure_nn_ops.cc  secure_pooling.cc  secure_reduction_ops.cc  secure_reduction_ops_common.cc  secure_reduction_ops_common.h  secure_state.cc  secure_state_ops.cc  secure_train.cc  secure_train_ops.cc  secure_utils.h
cc/tf/secureops/cmake/: pch.h.in
cc/tf/secureops/data/: secure_dataset_ops.cc  secure_textline_dataset.cc
cc/tf/secureops/tests/: CONFIG0.json  CONFIG1.json  CONFIG2.json  secure_op_test.py  secure_opname_test.py  test.sh
(+1243 files in other folders)
